--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="tabInactiveTextColor">@android:color/tab_indicator_text</color>
     <color name="card_background">#FFFFFF</color>
-    <color name="noti_background">#FFFFFF</color>
+    <color name="noti_background">#333333</color>
     <color name="colorAccent">#2196f3</color>
     <color name="titleText">@android:color/primary_text_dark</color>
     <color name="bodyText">@android:color/secondary_text_dark</color>
