--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/noti_album_art"
-        android:layout_alignLeft="@+id/noti_album_art"
-        android:layout_alignRight="@+id/noti_view_holder"
+        android:layout_alignStart="@+id/noti_album_art"
+        android:layout_alignEnd="@+id/noti_view_holder"
         android:layout_alignTop="@+id/noti_album_art"
         android:scaleType="fitXY"
         android:src="@color/noti_background" />
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/noti_album_art"
         android:layout_alignTop="@+id/noti_album_art"
-        android:layout_toRightOf="@+id/noti_album_art">
+        android:layout_toEndOf="@+id/noti_album_art">
 
         <TextView
             android:id="@+id/noti_song_name"
@@ -36,10 +36,10 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:singleLine="true"
+            android:maxLines="1"
             android:text=""
             android:textColor="#fff"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/noti_song_artist"
@@ -48,10 +48,10 @@
             android:layout_below="@+id/noti_song_name"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:singleLine="true"
+            android:maxLines="1"
             android:text=""
             android:textColor="#c7c7c7"
-            android:textSize="12dp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/noti_song_album"
@@ -60,10 +60,10 @@
             android:layout_below="@+id/noti_song_artist"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:singleLine="true"
+            android:maxLines="1"
             android:text=""
             android:textColor="#c7c7c7"
-            android:textSize="12dp" />
+            android:textSize="12sp" />
 
 
 
