--- a/app/src/main/res/layout/artist_list_item.xml
+++ b/app/src/main/res/layout/artist_list_item.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:padding="10dp">
+    android:layout_height="72dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <com.makeramen.roundedimageview.RoundedImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/artist_image"
-        android:layout_width="60dp"
+        android:layout_width="72dp"
         android:layout_height="match_parent"
+        android:padding="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:contentDescription="@string/artist_image"
         android:adjustViewBounds="true"
         android:src="@drawable/default_artwork_dark"
         app:riv_corner_radius="30dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:paddingStart="72dp"
+        android:paddingEnd="16dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/artist_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:maxLines="1"
             android:textColor="@android:color/primary_text_light"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/artist_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:maxLines="1"
-            android:textColor="@android:color/secondary_text_light" />
+            android:textColor="@android:color/secondary_text_light"
+            android:textSize="14sp"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
