--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -2,45 +2,52 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/card_background"
-    android:drawSelectorOnTop="true"
-    android:foreground="?android:attr/selectableItemBackground">
-
-    <RelativeLayout
-        android:id="@+id/real_background"
+    android:id="@+id/real_background">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/card_background"
-        android:foreground="?android:attr/selectableItemBackground">
-
+        android:orientation="vertical">
         <ImageView
             android:id="@+id/grid_art"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/grid_view_album_art_height"
             android:scaleType="centerCrop"
             android:src="@drawable/default_artwork_dark"
-            android:transitionName="albumArt" />
+            android:transitionName="albumArt"
+            android:contentDescription="@string/album_art" />
 
-        <TextView
-            android:id="@+id/grid_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/grid_art"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:maxLines="1"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="18sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:padding="16dp"
+            android:background="@color/card_background"
+            android:id="@+id/text_holder">
+            <TextView
+                android:id="@+id/grid_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_above="@+id/center_item"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="16sp"
+                android:text="Name" />
 
-        <TextView
-            android:id="@+id/grid_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/grid_name"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="2dp"
-            android:maxLines="1"
-            android:textColor="@android:color/secondary_text_light" />
-    </RelativeLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/center_item"/>
+
+            <TextView
+                android:id="@+id/grid_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/center_item"
+                android:maxLines="1"
+                android:textColor="@android:color/secondary_text_light"
+                android:textSize="12sp"
+                android:text="Desc" />
+        </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
