--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,30 +3,23 @@
     <style name="AppTheme.Main" parent="MaterialDrawerTheme.Light">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:fastScrollThumbDrawable">@drawable/ic_datejumper</item>
-        <item name="android:fastScrollTrackDrawable">@android:color/transparent</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowActivityTransitions">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
     <style name="DarkDialog" parent="AppTheme.Main"/>
 
     <style name="AppTheme.Album" parent="AppTheme.Main">
-        <!--<item name="colorPrimary">@color/ColorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/ColorPrimaryDark</item>-->
         <item name="windowActionBar">false</item>
-        <!--<item name="colorAccent">@color/accent_color</item>-->
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.Player" parent="AppTheme.Main">
-        <!--<item name="colorPrimary">@color/ColorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/ColorPrimaryDark</item>-->
         <item name="windowActionBar">false</item>
-        <!--<item name="colorAccent">@color/accent_color</item>-->
         <item name="windowNoTitle">true</item>
     </style>
 
