--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/real_background">
+    android:id="@+id/real_background"
+    android:elevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,8 +30,7 @@
                 android:maxLines="1"
                 android:layout_above="@+id/center_item"
                 android:textColor="@android:color/primary_text_light"
-                android:textSize="16sp"
-                android:text="Name" />
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="0dp"
@@ -46,8 +46,7 @@
                 android:layout_below="@+id/center_item"
                 android:maxLines="1"
                 android:textColor="@android:color/secondary_text_light"
-                android:textSize="12sp"
-                android:text="Desc" />
+                android:textSize="12sp" />
         </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
