--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,8 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:windowEnterTransition">@android:transition/slide_bottom</item>
+        <item name="android:windowExitTransition">@android:transition/slide_bottom</item>
     </style>
 
     <style name="DarkDialog" parent="AppTheme.Main"/>
@@ -26,5 +28,10 @@
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/white</item>
     </style>
+
+    <style name="AppTheme.BrandedLaunch" parent="AppTheme.Main">
+        <item name="android:windowBackground">@drawable/branded_logo</item>
+    </style>
+
 
 </resources>
