--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
         <android.support.design.widget.TabLayout
             android:id="@+id/main_tablayout"
             android:layout_width="match_parent"
@@ -38,7 +39,6 @@
         android:elevation="12dp"
         android:src="@drawable/ic_audiotrack_white_24dp"
         app:backgroundTint="@color/colorAccent"
-        app:borderWidth="0dp"
         app:layout_anchor="@+id/main_viewpager"
         app:layout_anchorGravity="bottom|right|end"
         app:layout_behavior="com.dominionos.music.utils.ScrollAwareFABBehavior" />
