--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,20 +13,8 @@
         <item name="android:windowExitTransition">@android:transition/slide_bottom</item>
     </style>
 
-    <style name="DarkDialog" parent="AppTheme.Main"/>
-
-    <style name="AppTheme.Album" parent="AppTheme.Main">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.Player" parent="AppTheme.Main">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@android:color/white</item>
+        <item name="color">@android:color/primary_text_dark</item>
     </style>
 
     <style name="AppTheme.BrandedLaunch" parent="AppTheme.Main">
