--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -31,6 +31,14 @@
                     app:layout_collapseMode="parallax"
                     android:contentDescription="@string/album_art" />
 
+                <RelativeLayout
+                    android:id="@+id/shade_over_art"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/image_inner_shadow"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax" />
+
                 <View
                     android:id="@+id/title_background"
                     android:layout_width="match_parent"
