--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -77,10 +77,12 @@
                     android:gravity="center_vertical">
 
                         <ImageView
+                            android:id="@+id/player_repeat"
                             android:layout_width="42dp"
                             android:layout_height="42dp"
                             android:layout_weight="1"
                             android:background="@drawable/unbounded_ripple"
+                            android:drawSelectorOnTop="true"
                             android:padding="5dp"
                             android:src="@drawable/ic_repeat"
                             android:contentDescription="@string/repeat" />
