--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -58,7 +58,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_artist_activity"
+        android:id="@+id/rv_album"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="8dp"
