--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -14,6 +14,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:orientation="vertical"
+        android:layout_marginEnd="34dp"
         tools:ignore="RelativeOverlap">
         <TextView
             android:id="@+id/song_item_name"
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:ellipsize="end" />
 
         <TextView
             android:id="@+id/song_item_desc"
@@ -29,7 +31,8 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:textColor="?android:attr/textColorSecondary"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:ellipsize="end" />
     </LinearLayout>
 
     <ImageView
@@ -41,6 +44,8 @@
         android:background="@drawable/unbounded_ripple"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:layout_margin="-8dp"
+        android:padding="8dp"
         android:src="@drawable/ic_overflow_dark"
         tools:ignore="ContentDescription" />
 </RelativeLayout>
