--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@android:color/primary_text_dark</item>
+        <item name="color">@android:color/white</item>
     </style>
 
     <style name="AppTheme.BrandedLaunch" parent="AppTheme.Main">
