--- a/app/src/main/res/layout/dialog_playlist_item.xml
+++ b/app/src/main/res/layout/dialog_playlist_item.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="@android:color/primary_text_light"
         android:textSize="18sp"
         tools:ignore="RelativeOverlap" />
@@ -25,11 +26,11 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="10dp"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@drawable/unbounded_ripple"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:padding="10dp"
-        android:src="@drawable/ic_overflow"
+        android:src="@drawable/ic_overflow_dark"
         android:contentDescription="@string/menu" />
 
     <TextView
